<resources>
    <string name="app_name">taskmaster</string>
    <string name="product_name">Product Name</string>
    <string name="ProductNameInput">Product Name input</string>
    <string name="ProductNameInput2">Product Name Input</string>
    <string name="MainActivityMyTasks">My Tasks</string>
    <string name="MainActivityAddTask">Add Task</string>
    <string name="MainActivityAllTasks">All Tasks</string>
    <string name="CreateActivityTaskTile">Add Task</string>
    <string name="CreateActivityTaskInputHint">My Task</string>
    <string name="CreateActivityTaskDescriptionLabel">Task Description</string>
    <string name="AllActivitiesAllTasksTitle">All Tasks</string>
    <string name="CreateTaskActivityButton">Submit Task</string>
    <string name="AllActivitiesButton">Show Toast</string>
    <string name="AllTasksButton2">Show Toast 2</string>
    <string name="AllActivitiesCounter">"Counter: "</string>
    <string name="title_activity_task_detail_page">TaskDetailPage</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="TaskDetailTitleTextView">Task Details</string>
    <string name="TaskDetailDescriptionText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus arcu bibendum at varius vel pharetra vel turpis nunc. Bibendum est ultricies integer quis auctor elit sed. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Et netus et malesuada fames ac. Nullam vehicula ipsum a arcu cursus vitae congue mauris rhoncus. Sollicitudin aliquam ultrices sagittis orci a scelerisque. Consectetur purus ut faucibus pulvinar elementum integer enim. Ligula ullamcorper malesuada proin libero nunc consequat. Interdum velit euismod in pellentesque. Mauris augue neque gravida in fermentum et. Tristique senectus et netus et malesuada fames ac. Nullam vehicula ipsum a arcu cursus. Quisque id diam vel quam elementum pulvinar etiam non quam. Vel pretium lectus quam id leo in vitae turpis massa. A pellentesque sit amet porttitor eget dolor morbi non. Ipsum dolor sit amet consectetur adipiscing elit. Ac tortor vitae purus faucibus ornare suspendisse sed. Porttitor rhoncus dolor purus non enim praesent elementum facilisis.\n\nFeugiat in fermentum posuere urna nec tincidunt praesent. Sapien pellentesque habitant morbi tristique senectus et netus et malesuada. Sit amet consectetur adipiscing elit pellentesque habitant morbi. Imperdiet nulla malesuada pellentesque elit. Felis donec et odio pellentesque diam volutpat commodo sed egestas. Id velit ut tortor pretium viverra suspendisse. Tincidunt praesent semper feugiat nibh. Id nibh tortor id aliquet. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Elit sed vulputate mi sit. Ullamcorper malesuada proin libero nunc consequat interdum varius sit amet. Sed blandit libero volutpat sed. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Sit amet justo donec enim diam vulputate. Odio eu feugiat pretium nibh ipsum consequat nisl. Placerat orci nulla pellentesque dignissim.\n\nRisus ultricies tristique nulla aliquet enim tortor at. Id faucibus nisl tincidunt eget nullam. Malesuada fames ac turpis egestas sed tempus urna et pharetra. Nibh ipsum consequat nisl vel pretium lectus quam. Interdum varius sit amet mattis vulputate enim nulla aliquet. Quis ipsum suspendisse ultrices gravida dictum fusce ut placerat. Et netus et malesuada fames ac. Velit dignissim sodales ut eu sem integer vitae justo. Etiam sit amet nisl purus in mollis nunc sed id. Sed tempus urna et pharetra pharetra massa massa ultricies mi. Elit eget gravida cum sociis natoque penatibus.\n\nViverra justo nec ultrices dui sapien eget mi proin. Sit amet justo donec enim. Quam quisque id diam vel quam elementum pulvinar. Nisl condimentum id venenatis a. Pharetra massa massa ultricies mi quis hendrerit dolor magna eget. Tristique senectus et netus et malesuada. In mollis nunc sed id semper. Id cursus metus aliquam eleifend mi in nulla posuere sollicitudin. Sapien pellentesque habitant morbi tristique senectus et. Ut tristique et egestas quis ipsum suspendisse ultrices gravida. Nullam non nisi est sit amet facilisis. Volutpat sed cras ornare arcu dui. Vulputate eu scelerisque felis imperdiet proin fermentum. Praesent tristique magna sit amet purus. Sapien pellentesque habitant morbi tristique senectus et. Amet porttitor eget dolor morbi non arcu risus quis. Diam maecenas sed enim ut sem. Amet consectetur adipiscing elit ut.\n\nCongue quisque egestas diam in arcu cursus euismod. Senectus et netus et malesuada fames. Elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi. Volutpat sed cras ornare arcu dui vivamus arcu felis bibendum. Cras pulvinar mattis nunc sed blandit libero volutpat. A erat nam at lectus urna duis convallis convallis. Eu augue ut lectus arcu bibendum. At lectus urna duis convallis convallis tellus id interdum. Nisl pretium fusce id velit ut. Senectus et netus et malesuada fames ac turpis. Quam nulla porttitor massa id neque aliquam. Natoque penatibus et magnis dis parturient. Lacus viverra vitae congue eu consequat ac felis donec.</string>
    <string name="MainActivitiesViewDetailsButton">Task Details</string>
    <string name="MainActivityImageDescription">Image Description placeholder</string>
    <string name="UsernameActivitySetUsername">Enter Username</string>
    <string name="SettingsActivityEnterUsername">Enter Username</string>
    <string name="EnterUserNameSettingsActivity">Enter new username</string>
    <string name="SaveUsernameButton">Set new username\n</string>
    <string name="UserNameTextView">Username goes here</string>
    <string name="AllActivitiesSetUsernameImage">small image button to bring you to the set username activity\n</string>
    <string name="AllTasksImageHolder">image holder content description\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_product_name">Blank product Name</string>
    <string name="sign_up">sign up</string>
    <string name="login">Login</string>
    <string name="logout">logout</string>
</resources>