<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AllTasks"
    android:padding="1dp">

    <TextView
        android:id="@+id/AllActivitiesViewAllActivitiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="469dp"
        android:text="@string/AllActivitiesAllTasksTitle"
        android:textColor="#2A4205"
        app:layout_constraintBottom_toTopOf="@+id/AllTasksShowToastButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AllTasksToastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="160dp"
        android:text="@string/AllActivitiesButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllActivitiesViewAllActivitiesTitle" />

    <Button
        android:id="@+id/AllTasksShowToastButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="76dp"
        android:text="@string/AllTasksButton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllTasksToastButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/AllActivitiesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="333dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="675dp"
        android:text="@string/AllActivitiesCounter"
        android:textColor="#2A4205"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>