<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0F0"
    android:backgroundTint="#CAD8FB"
    tools:context=".activities.CreateTask">

    <TextView
        android:id="@+id/CreateActivityTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="72dp"
        android:background="#89C3F4"
        android:text="@string/CreateActivityTaskTile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreateActivityTaskTitleInput"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="33dp"
        android:hint="@string/CreateActivityTaskInputHint"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CreateActivityTaskDescriptionLabel"
        android:layout_width="269dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskTitleInput"
        tools:layout_editor_absoluteX="45dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreateActivityTaskDescriptionInput"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:background="#0C56EA"
        android:backgroundTint="#9DB9F1"
        android:hint="@string/CreateActivityTaskDescriptionLabel"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskDescriptionLabel" />

    <Button
        android:id="@+id/CreateTaskActivitySubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="157dp"
        android:text="@string/CreateTaskActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskDescriptionInput" />
</androidx.constraintlayout.widget.ConstraintLayout>